# graphics-course

./: .gitignore  CMakeLists.txt
graphics_hw1/: main.cpp
hw1/: CMakeLists.txt  main.cpp
hw1/include/: graph.hpp  isoline.hpp  metaballs.hpp  utils.hpp
hw1/shaders/: graph_fragment_shader.glsl  graph_fragment_shader.h  graph_vertex_shader.glsl  graph_vertex_shader.h  grid_fragment_shader.glsl  grid_fragment_shader.h  grid_vertex_shader.glsl  grid_vertex_shader.h  isoline_fragment_shader.glsl  isoline_fragment_shader.h  isoline_vertex_shader.glsl  isoline_vertex_shader.h
hw2/: CMakeLists.txt  main.cpp
hw2/include/: blur.cpp  blur.hpp  blur_builder.cpp  blur_builder.hpp  cubemap_builder.cpp  cubemap_builder.hpp  direction_light_object.cpp  direction_light_object.hpp  object.cpp  object.hpp  point_light_object.cpp  point_light_object.hpp  scene_storage.cpp  scene_storage.hpp  shader_program.cpp  shader_program.hpp  shadow_map.cpp  shadow_map.hpp  shadow_map_builder.cpp  shadow_map_builder.hpp  utils.cpp  utils.hpp  wavefront_parser.cpp  wavefront_parser.hpp
hw2/scenes/sponza/: sponza.mtl
hw2/scenes/torii-gate/source/: scene.fbx
hw2/shaders/: blur_fragment_shader.glsl  blur_vertex_shader.glsl  object_fragment_shader.glsl  object_vertex_shader.glsl  shadow_fragment_shader.glsl  shadow_vertex_shader.glsl
libs/: CMakeLists.txt  hexdumparray.cpp
practice1/: main.cpp
practice10/: CMakeLists.txt  main.cpp
practice11/: CMakeLists.txt  main.cpp
practice12/: CMakeLists.txt  main.cpp
practice2/: main.cpp
practice3/: main.cpp
practice4/: main.cpp
practice5/: main.cpp
practice6/: CMakeLists.txt  main.cpp
practice7/: CMakeLists.txt  main.cpp
practice8/: CMakeLists.txt  main.cpp
practice9/: CMakeLists.txt  main.cpp
